cambio de atributos en models Medicamentos

--- a/myworld/medicamentos/templates/add.html
+++ b/myworld/medicamentos/templates/add.html
@@ -12,11 +12,8 @@ Cantidad Stock:<br>
 Cantidad Dispensada:<br>
 <input name="cantDispensada">
 <br><br>
-Fecha Ingreso:<br>
-<input name="fechaIngreso" type="date">
-<br><br>
-Fecha Vencimiento: <br>
-<input name="fechaVencimiento" type="date">
+cantidad Ingresada:<br>
+<input name="cantIngresada" >
 <br><br>
 
 
