--- a/myworld/medicamentos/templates/update.html
+++ b/myworld/medicamentos/templates/update.html
@@ -10,12 +10,8 @@
     Cantidad Dispensada:<br>
     <input name="cantDispensada" value="{{ mymember.cantDispensada }}">
     <br><br>
-    Fecha de Ingreso:<br>
-    <input name="fechaIngreso"  type="date" value="{{ mymember.fechaIngreso }}">
-    <br><br>
-    Fecha de Vencimiento:<br>
-    <input name="fechaVencimiento"  type="date" value="{{ mymember.fechaVencimiento }}">
-    <br><br>
+    Cantidad Ingresada:<br>
+    <input name="cantIngresada"  value="{{ mymember.cantIngresada }}">
     <input type="submit" value="Actualizar">
 </form>
 <form action="updaterecord/{{ mymember.id }}" method="post">
