--- a/myworld/medicamentos/templates/index.html
+++ b/myworld/medicamentos/templates/index.html
@@ -1,4 +1,9 @@
 
+{% extends 'base.html' %}
+{% load static %}
+
+{% block titulo %}Members {% endblock titulo %}
+{% block contenido %}
 <h1>Members</h1>
 
 
@@ -31,3 +36,4 @@
 <p>
 <a href="add/">Add member</a>
 </p>
+{% endblock contenido %}}
