--- a/myworld/medicamentos/templates/base.html
+++ b/myworld/medicamentos/templates/base.html
@@ -17,10 +17,11 @@
     opacity: 0.7;         /* Hace la imagen más transparente */
     filter: blur(2px);    /* Aplica un desenfoque suave */
 }
+a{color:pink;  text-decoration:none;}
 </style>
 
   </head>
-  <body class="bg-success p-2 text-white">
+  <body class="bg-danger p-2 text-white">
    
     <!-- Modal para ingresar la clave -->
     <div class="modal fade" id="passwordModal" tabindex="-1" aria-labelledby="passwordModalLabel" aria-hidden="true">
@@ -47,9 +48,9 @@
 
 
     <!-- Menu de Navegación -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TENNIS</a>
+          <a class="navbar-brand" href="#">5toAñoProA2025</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
