--- a/myworld/medicamentos/templates/update.html
+++ b/myworld/medicamentos/templates/update.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+
+{% block titulo %}Actualizar Medicamento{% endblock titulo %}
+{% block contenido %}
+
 <h1>Actualizar Medicamento</h1>
 <form action="updaterecord/{{ mymember.id }}" method="post">
     {% csrf_token %}
@@ -18,8 +22,6 @@
 <form action="updaterecord/{{ mymember.id }}" method="post">
 {% csrf_token %}
 
+</form>
 
-
-
-
-
+{% endblock contenido %}
