--- a/myworld/medicamentos/templates/base.html
+++ b/myworld/medicamentos/templates/base.html
@@ -21,7 +21,7 @@ a{color:pink;  text-decoration:none;}
 </style>
 
   </head>
-  <body class="bg-danger p-2 text-white">
+  <body class="bg-primary p-2 text-white">
    
     <!-- Modal para ingresar la clave -->
     <div class="modal fade" id="passwordModal" tabindex="-1" aria-labelledby="passwordModalLabel" aria-hidden="true">
