agregado app reciclados

--- a/myworld/reciclados/templates/base.html
+++ b/myworld/reciclados/templates/base.html
@@ -64,11 +64,9 @@ a{color:pink;  text-decoration:none;}
                  <a class="nav-link active" aria-current="page" href="{% url 'inicio' %}">Inicio</a>                                                                                                                         
                  </li>
                   <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'index' %}">stock Medicamentos</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'indexM' %}">Reciclados</a>
                  </li>
-                   <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'reciclados:indexM' %}">Reciclados</a>
-                 </li>
+                 
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
