--- a/myworld/medicamentos/templates/index.html
+++ b/myworld/medicamentos/templates/index.html
@@ -34,6 +34,6 @@
 
 
 <p>
-<a href="add/">Add member</a>
+<a href="add/">Add medicamentos</a>
 </p>
-{% endblock contenido %}}
+{% endblock contenido %}
